Link only to specific pages in header

--- a/_config.yml
+++ b/_config.yml
@@ -64,8 +64,11 @@ minima:
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-#header_pages:
-# - about.md
+header_pages:
+ - docs.md
+ - docs/paper/index.html
+ - posts.md
+ - about.md
 
 # Build settings
 #theme: jekyll-theme-paper
